- Fixed multiple elements with the same ID - Fixed some cases where the navbar would not show correctly on mobile

--- a/src/app/navigation/navigation.component.sass
+++ b/src/app/navigation/navigation.component.sass
@@ -32,6 +32,7 @@ h6
 li.nav-item .nav-link:hover
   color: white !important
   border-radius: 3px
+  background: $mmblue !important
 
 .dropdown-menu
   border-radius: 1px
@@ -46,16 +47,10 @@ li.nav-item .nav-link:hover
   a
     color: $orange !important
 
-.underline
-  border-bottom: 1px solid #f2f2f2
-
 .mobile-submenu
   width: 100% !important
   font-weight: 900
   font-size: 12px !important
-
-#navBtn:hover
-  background: $mmblue !important
 
 .display-mobile
   display: block !important
